// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="link "
  href="/contacts"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Home
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="link hover"
  href="/contacts"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Home
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="link "
  href="/contacts"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Home
</a>
`;
